--- a/css/styles2.css
+++ b/css/styles2.css
@@ -2,10 +2,33 @@ h1{
   font-family: 'Amatic SC', cursive;
   font-size: 60px;
   text-align: center;
+  color: black;
 }
 h2{
+  font-family: 'helvetica', cursive;
+  font-size: 30px;
+  text-align: center;
+  color: black;
+}
+h3{
   font-family: 'Amatic SC', cursive;
-  font-size: 40px;
+  font-size: 30px;
+  text-align: center;
+}
+h4{
+  font-family: 'Amatic SC', cursive;
+  font-size: 30px;
+  text-align: center;
+}
+h6{
+  font-family: 'helvetica';
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+p{
+  font-size: 15px;
+  font-family: helvetica;
   text-align: center;
 }
 .picture{
@@ -15,15 +38,17 @@ h2{
 .empty-space{
   min-height: 200px;
 }
-
-.nav li{
-  display: inline;
-  font-size: 25px;
+.nav{
+  margin-top: 20px;
+  border-color: blue;
+  border-style: solid;
+  border-width: 2px;
   background-color: blue;
-  text-align: center;
+  text-align: justify;
 }
 .left-nav{
   text-align: center;
+  color: black;
 }
 .center-nav{
   text-align: center;
@@ -52,4 +77,24 @@ h2{
       right: 300px;
       width: 400px;
       height: 40px;
+}
+.col-sm-6{
+  text-align: center;
+}
+.footer{
+  position: center;
+  text-align: center;
+  background: black;
+  margin-top: 20px;
+}
+.footer-text{
+  text-align: center;
+}
+.footer-about{
+  position: center;
+  position: absolute;
+  text-align: center;
+  background: black;
+  margin-top: 20px;
+  bottom: -90px;
 }
